[gd_scene load_steps=10 format=3 uid="uid://dpbtiectljtq"]

[ext_resource type="Script" uid="uid://8sruk52q2y8v" path="res://Scripts/enemy_melee.gd" id="1_6gbma"]
[ext_resource type="Texture2D" uid="uid://d0t4dacl0eejh" path="res://Assets/Sprites/entity_player_spritesheet.png" id="2_3dfpd"]

[sub_resource type="Animation" id="Animation_s1fu1"]
resource_name = "Fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_b7o5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [51]
}

[sub_resource type="Animation" id="Animation_84rqt"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rc88t"]
_data = {
&"Fly": SubResource("Animation_s1fu1"),
&"RESET": SubResource("Animation_b7o5j"),
&"idle": SubResource("Animation_84rqt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gbma"]
size = Vector2(43, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_n3oyg"]
radius = 32.0156

[sub_resource type="CircleShape2D" id="CircleShape2D_tdmi6"]
radius = 466.13

[node name="enemy_melee" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_6gbma")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(25, -68)
texture = ExtResource("2_3dfpd")
hframes = 16
vframes = 6
frame = 51

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_rc88t")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 18
visibility_layer = 2
position = Vector2(-2.5, 6.5)
shape = SubResource("RectangleShape2D_6gbma")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 18
visibility_layer = 2
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_n3oyg")

[node name="Player_detection" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="Player_detection"]
light_mask = 18
visibility_layer = 2
shape = SubResource("CircleShape2D_tdmi6")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player_detection" to="." method="_on_player_detection_body_exited"]
